@@ -2,13 +2,12 @@ package com.cgi.scrumescapegame;
 
 import java.awt.*;
 import java.util.ArrayList;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Random;
 
 public class Map {
-    private List<Point> positions = new ArrayList<>();
-    private int roomCount = 24;
+    private final List<Point> positions = new ArrayList<>();
+    private final int roomCount = 24;
     public void generateMapLayout() {
         // Start room at (0,0)
         positions.add(new Point(0, 0));
@@ -67,22 +66,8 @@ public class Map {
         if (x < -roomCount/2 || x > roomCount/2 || y < 1 || y > roomCount) {
             return false; // Kamer kan niet worden toegevoegd, omdat deze buiten de grenzen ligt
         }
-        if (hasRoom(x, y)) {
-            return false; // Kamer kan niet worden toegevoegd, omdat deze al bestaat
-        }
-//            if (check2x2(x, y)) {
-//                return false; // Kamer kan niet worden toegevoegd, omdat deze al bestaat
-//            }
-
-        return true; // Kamer kan worden toegevoegd
+        return !hasRoom(x, y);
     }
-//    public boolean check2x2(int x, int y) {
-//        return (hasRoom(x - 1, y) && hasRoom(x, y - 1) && hasRoom(x - 1, y - 1) ||
-//                        hasRoom(x + 1, y) && hasRoom(x, y - 1) && hasRoom(x + 1, y - 1) ||
-//                        hasRoom(x - 1, y) && hasRoom(x, y + 1) && hasRoom(x - 1, y + 1) ||
-//                        hasRoom(x + 1, y) && hasRoom(x, y + 1) && hasRoom(x + 1, y + 1)
-//        );
-//    }
 
     public void generateMap() {
         // Find the min and max x and y values from the room positions
@@ -99,15 +84,11 @@ public class Map {
             yMax = Math.max(yMax, p.y);
         }
 
-        // Adjust the grid size to fit the max position
-        int gridWidth = xMax - xMin + 1;
-        int gridHeight = yMax - yMin + 1;
-
         // Print the grid
         for (int y = yMax; y >= yMin; y--) {  // Go from top (yMax) to bottom (yMin)
             for (int x = xMin; x <= xMax; x++) {
                 if (hasRoom(x, y)) {
-                    if (positions.get(positions.size() - 1).equals(new Point(x, y))) {
+                    if (positions.getLast().equals(new Point(x, y))) {
                         System.out.print("🔴");
                     } else {
                         System.out.print("⚪");
@@ -119,6 +100,7 @@ public class Map {
             System.out.println();
         }
     }
+
     public boolean hasRoom(int x, int y) {
         for (Point p : positions) {
             if (p.x == x && p.y == y) {
@@ -145,7 +127,6 @@ public class Map {
         adjacentStatus.put("down", false);
 
         for (Point p : positions) {
-            if(Game.debug) System.out.println("testing: " + p.x + ", " + p.y);
             if (p.x == x + 1 && p.y == y) {
                 adjacentStatus.put("right", hasRoom(x + 1, y));
             }
